# realWorldHaskell

./: README.md
ch01/: WC.hs  WC2.hs
ch02/: lastButOne.hs  myDrop.hs
ch03/: AlgebraicVector.hs  AltCustomer.hs  BadIndent.hs  BadPattern.hs  BadTree.hs  BogusPattens.hs  BookStore.hs  Bool.hs  Braces.hs  Distinction.hs  Exercises.hs  GlobalVariable.hs  GoodIndent.hs  Guard.hs  Indentation.hs  Lending.hs  LetWhere.hs  ListADT.hs  LocalFunctions.hs  MySecond.hs  NestedLets.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  Tuple.hs  add.hs
ch04/: Adler32.hs  EfficientList.hs  Filter.hs  FixLines.hs  Fold.hs  IntParse.hs  InteractWith.hs  Lambda.hs  Map.hs  Partial.hs  Plus.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  ch04.exercises.hs  dlts.hs  hello-in.txt  hello-out.txt
ch05/: Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  SimpleResult.hs  Trouble.hs
ch05/mypretty/: Main.hs  PrettyJSON.hs  mypretty.cabal
ch06/: AuthomaticDerivation.hs  BrokenClass.hs  DataEither.hs  JSONClass.hs  Monomorphism.hs  NewType.hs  NewtypeDiff.hs  Overlap.hs  SimpleClass.hs  colorderived.hs  eqclasses.hs  naiveeq.hs  read.hs
ch07/: actions.hs  actions2.hs  basicio-nodo.hs  basicio.hs  callingpure.hs  filter.hs  input.txt  output.txt  return1.hs  return2.hs  return3.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3  toupper-lazy3.hs  toupper-lazy4.hs  toupper-lazy5.hs  toupper-lazy6.hs
ch08/: ElfMagic.hs  GlobRegex.hs  HighestClose.hs  SumFile.hs  append.hs
